--- a/config.cfg
+++ b/config.cfg
@@ -8,13 +8,13 @@ easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_curve: secp384r1
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
-easyrsa_key_size: 2048
 
 # if True re-init all existing certificates. Boolean
-easyrsa_reinit_existent: True
+easyrsa_reinit_existent: False
 
 # Domain or ip
 server_name: "{{ ansible_ssh_host }}"
+server_ip: "{{ ansible_ssh_host }}"
 
 users:
   - mr.smith
