--- a/config.cfg
+++ b/config.cfg
@@ -10,10 +10,10 @@ easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
 
 # if True re-init all existing certificates. Boolean
-easyrsa_reinit_existent: False
+easyrsa_reinit_existent: True
 
 # Domain or ip
-server_name: "{{ ansible_ssh_host }}"
+server_name: "win7.mycompany.local"
 server_ip: "{{ ansible_ssh_host }}"
 
 users:
