apparmom; split up some functions

--- a/config.cfg
+++ b/config.cfg
@@ -13,7 +13,7 @@ easyrsa_cert_expire: 3650
 easyrsa_reinit_existent: True
 
 # Domain or ip
-server_name: ivlis.me
+server_name: www.ivlis.me
 server_ip: "{{ ansible_ssh_host }}"
 
 users:
