--- a/config.cfg
+++ b/config.cfg
@@ -8,6 +8,7 @@ easyrsa_dir: /opt/easy-rsa-ipsec
 easyrsa_curve: secp384r1
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
+easyrsa_p12_export_password: vpn
 
 # if True re-init all existing certificates. Boolean
 easyrsa_reinit_existent: True
