--- a/config.cfg
+++ b/config.cfg
@@ -5,13 +5,12 @@
 #  secp384r1
 #  secp521r1
 easyrsa_dir: /opt/easy-rsa-ipsec
-easyrsa_curve: prime256v1
 easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
 easyrsa_p12_export_password: vpn
 
 # if True re-init all existing certificates. Boolean
-easyrsa_reinit_existent: False
+easyrsa_reinit_existent: True
 
 # Domain or ip
 server_name: www.ivlis.me
