--- a/config.cfg
+++ b/config.cfg
@@ -10,7 +10,7 @@ easyrsa_cert_expire: 3650
 easyrsa_p12_export_password: vpn
 
 # if True re-init all existing certificates. Boolean
-easyrsa_reinit_existent: True
+easyrsa_reinit_existent: False
 
 # Domain or ip
 server_name: www.ivlis.me
