--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,6 @@
 ---
 
+#
 # IKEv2 currently supports only the following three curves:
 #  prime256v1
 #  secp384r1
@@ -19,3 +20,9 @@ server_ip: "{{ ansible_ssh_host }}"
 users:
   - mr.smith
   - mrs.smith
+  
+#  
+# auditd options
+# email for auditd actions:
+auditd_action_mail_acct: e601809@gmail.com
+
