--- a/config.cfg
+++ b/config.cfg
@@ -14,9 +14,11 @@ easyrsa_p12_export_password: vpn
 easyrsa_reinit_existent: False
 
 # Domain or ip
-server_name: www.ivlis.me
+# server_name: - this domain or ip that you will use in your VPN client
+server_name: example.com
 server_ip: "{{ ansible_ssh_host }}"
 
+# specify users that you need
 users:
   - mr.smith
   - mrs.smith
@@ -24,5 +26,5 @@ users:
 #  
 # auditd options
 # email for auditd actions:
-auditd_action_mail_acct: e601809@gmail.com
+auditd_action_mail_acct: email@example.com
 
