--- a/features.yml
+++ b/features.yml
@@ -3,7 +3,7 @@
 - name: Other features
   hosts: vpn-host
   gather_facts: false
-  remote_user: root
+  become: true
   vars_files:
     - config.cfg    
   
