--- a/common.yml
+++ b/common.yml
@@ -1,27 +1,29 @@
+# vim:ft=ansible:
 ---
 
 - name: Common tools
   hosts: vpn-host
-  remote_user: root
   gather_facts: false
+  become: true
   vars_files:
     - config.cfg    
   
+  pre_tasks:
+    - name: Install prerequisites.
+      raw: sudo apt-get update -qq && sudo apt-get install -qq -y python2.7
+    - name: Configure defaults.
+      raw: sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1 
+
   tasks:
+
   - name: Wait for port 22 to become available
     local_action: "wait_for port=22 host={{ inventory_hostname }}"
-
-  - name: Updating apt-get
-    raw: apt-get update -qq
-    
-  - name: Install python2.7 for Ansible
-    raw: apt-get install -qq -y python2.7
 
   - name: Gather Facts
     setup:
     
   - name: Install Updates, Patches and Additional Security Software
-    apt: upgrade=dist update_cache=yes
+    apt: update_cache=yes upgrade=dist
 
   - name: Check if reboot is required
     shell: >
@@ -85,7 +87,20 @@
   - name: Periodic upgrades configured
     template: src=10periodic.j2 dest=/etc/apt/apt.conf.d/10periodic owner=root group=root mode=644
     
-- hosts: 127.0.0.1
+  handlers:
+    - name: restart auditd
+      service: name=auditd state=restarted
+
+    - name: restart rsyslog
+      service: name=rsyslog state=restarted
+      
+    - name: restart ssh
+      service: name=ssh state=restarted
+      
+    - name: flush routing cache
+      shell: echo 1 > /proc/sys/net/ipv4/route/flush     
+
+- hosts: localhost
   gather_facts: false
   vars_files:
     - config.cfg    
@@ -101,15 +116,3 @@
         - "#        and ensure that all your traffic passes through the VPN.      #"
         - "#----------------------------------------------------------------------#"    
   
-  handlers:
-    - name: restart auditd
-      service: name=auditd state=restarted
-
-    - name: restart rsyslog
-      service: name=rsyslog state=restarted
-      
-    - name: restart ssh
-      service: name=ssh state=restarted
-      
-    - name: flush routing cache
-      shell: echo 1 > /proc/sys/net/ipv4/route/flush     
