--- a/vpn.yml
+++ b/vpn.yml
@@ -25,10 +25,13 @@
     with_items:
       - apparmor
       - strongswan
+      - netfilter-persistent
 
   - name: Configure iptables so IPSec traffic can traverse the tunnel
     iptables: table=nat chain=POSTROUTING source=10.0.0.0/24 jump=MASQUERADE
-
+    notify:
+    - save iptables
+    
   - name: Setup the ipsec.conf file from our template
     template: src=ipsec.conf.j2 dest=/etc/ipsec.conf owner=root group=root mode=644
     notify:
@@ -148,3 +151,6 @@
 
     - name: restart apparmor
       service: name=apparmor state=restarted
+      
+    - name: save iptables
+      command: service netfilter-persistent save
