--- a/config.cfg
+++ b/config.cfg
@@ -12,6 +12,9 @@ easyrsa_reinit_existent: False
 # server_name: - this domain or ip that you will use in your VPN client
 server_name: example.com
 server_ip: "{{ ansible_ssh_host }}"
+dns_servers:
+  - 8.8.8.8
+  - 8.8.4.4
 
 users:
   - mr.smith
@@ -21,4 +24,6 @@ users:
 # auditd options
 # email for auditd actions:
 auditd_action_mail_acct: email@example.com
+
+
 
